<resources>
    <string name="app_name">Medical Rep App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="are_you_already_have_an_account">Are You Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="the_password_and_the_confirm_are_not_matched">the password and the confirm are not matched</string>
    <string name="log_out">Log Out</string>
    <string name="verification_code">Verification Code</string>
    <string name="_01114886639">01114886639</string>
    <string name="profile">Profile</string>
    <string name="doctors">Doctors</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="area">Area</string>
    <string name="center">Center</string>
    <string name="Location">Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="products">Products</string>
    <string name="last_visit">Last Visit</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="specialties_array">
        <item>Allergy and Immunology</item>
        <item>Aesthetic Medicine</item>
        <item>Anesthesiology</item>
        <item>Cardiology</item>
        <item>Dermatology</item>
        <item>Emergency Medicine</item>
        <item>Endocrinology</item>
        <item>Family Medicine</item>
        <item>Gastroenterology</item>
        <item>Hematology and Oncology</item>
        <item>Infectious Disease</item>
        <item>Internal Medicine</item>
        <item>Nephrology</item>
        <item>Neurology</item>
        <item>Obstetrics and Gynecology</item>
        <item>Ophthalmology</item>
        <item>Orthopedics</item>
        <item>Otolaryngology</item>
        <item>Pathology</item>
        <item>Pediatrics</item>
        <item>Physical Medicine and Rehabilitation</item>
        <item>Psychiatry</item>
        <item>Pulmonology</item>
        <item>Radiology</item>
        <item>Rheumatology</item>
        <item>Surgery</item>
        <item>Urology</item>
    </string-array>

    <string-array name="egypt_cities_array">
        <item>Cairo</item>
        <item>Giza</item>
        <item>Alexandria</item>
        <item>Dakahlia</item>
        <item>Beheira</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Ismailia</item>
        <item>Monufia</item>
        <item>Minya</item>
        <item>Kalyubia</item>
        <item>New Valley</item>
        <item>Sharqia</item>
        <item>Suez</item>
        <item>Aswan</item>
        <item>Assiut</item>
        <item>Beni Suef</item>
        <item>Port Said</item>
        <item>Damietta</item>
        <item>6th of October</item>
        <item>Sheikh Zayed</item>
        <item>North Sinai</item>
        <item>South Sinai</item>
        <item>Kafr El Sheikh</item>
        <item>Matruh</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sohag</item>
    </string-array>

    <string-array name="egypt_governorates_array">
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="dr">Dr. </string>
    <string name="doctor_profile_picture">Doctor Profile picture</string>
    <string name="specialty">Specialty</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="visits_par_month">Visits par month</string>
    <string name="visit">visit</string>
    <string name="start_location">Start Location</string>
    <string name="a_visit_to_dr">A Visit To Dr.</string>
    <string name="status_of_the_account">Status Of The Account</string>
    <string name="active">Active</string>
    <string name="notactive">NotActive</string>
    <string name="main_competitor">Main Competitor</string>
    <string name="feedback">Feedback</string>
    <string name="next_call_observation">Next Call Observation</string>
    <string name="add_order">Add Order</string>
    <string name="choose_location_to_show_the_address">choose location to show the address</string>

</resources>