<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/headerUserImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/headerUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        tools:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/headerUserImage"
        app:layout_constraintTop_toBottomOf="@+id/headerUserImage" />

    <TextView
        android:id="@+id/headerUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/headerUserName"
        app:layout_constraintTop_toBottomOf="@+id/headerUserName" />

    <TextView
        android:id="@+id/headerUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/_01114886639"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/headerUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/headerUserEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>
